--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>SAE | Events</title>
-  <link rel="icon" type="image/png" href="../images/logos/sae.png" />
+  <link rel="icon" type="image/png" href="../images/logos/sae-removebg-preview.png" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:100i,300,400,500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
