--- a/vertical-timeline/index.html
+++ b/vertical-timeline/index.html
@@ -15,7 +15,7 @@
 <header>
   <div class="container text-center">
     <h1>Timeline</h1>
-    <p>Never cease to imagine </p>
+    <!-- <p>Never cease to imagine </p> -->
   </div>
 </header>
 
