--- a/main.html
+++ b/main.html
@@ -271,7 +271,7 @@
                             <img src="images/portfolio/sae-international.jpg" class="img-responsive" alt="..">
                             <h4>SAE International</h4>
                             <div class="border"></div>
-                            <p>SAE International is a globally active professional association and standards developing organization for engineering professionals in various industrie</p>
+                            <p>SAE International is a globally active professional association and standards developing organization for engineering professionals in various industries</p>
                         </div>
                     </div>
                     
