--- a/main.html
+++ b/main.html
@@ -483,7 +483,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-3">
                           <div class="counter-item">
                             <i class="fa fa-group"></i>
-                            <div class="timer" id="item2" data-to="20" data-speed="5000"></div>
+                            <div class="timer" id="item2" data-to="50" data-speed="5000"></div>
                             <h5>Communities</h5>                               
                           </div>
                         </div>
@@ -848,7 +848,7 @@
                                 </div>
                             </li>
                             
-                            <a href="gallery/index.html" class="gallery-btn "><button class="button button2">More</button></a>
+                            <a href="achievements/index.html" class="gallery-btn "><button class="button button2">More</button></a>
                             
                         </ul>
                         <!-- End Portfolio items -->
