Change http to https

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     
@@ -1398,7 +1398,7 @@
                             <ul class="footer-ul" style="padding: 0px;">
                                 <li><a href="https://www.instagram.com/saegect/"><i class="social fa fa-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/sae.gecthrissur.3"><i class="social fa fa-facebook"></i></a></li>
-                                <li><a href="http://www.linkedin.com/in/sae-gect-chapter-2abbb31a0"><i class="social fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/sae-gect-chapter-2abbb31a0"><i class="social fa fa-linkedin"></i></a></li>
                                 <li><a href="https://www.youtube.com/channel/UCug85ysBOqSZsVIH_cgpkDw"><i class="social fa fa-youtube"></i></a></li>
                             </ul>
                         </div>
