--- a/main.html
+++ b/main.html
@@ -844,7 +844,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="section-title text-center">
-                            <h3 class="team-title">Executive Committee <span>2019-20</span></h3>                    
+                            <h3 class="team-title">Execom <span>2019-20</span></h3>                    
                         </div>
                 </div>
             </div>
@@ -1266,7 +1266,7 @@
                             <div class="author">Dr. Sheeba V S</div>
                             <div class="designation">Principal</div>
                         </div>
-                        <p>SAE GECT collegiate club has never failed in bringing laurels to our college. Wishing the club members<br> all the very best for their future endeavours.</p>
+                        <p>SAE GECT collegiate club has never failed in bringing laurels to our college. Wishing the club members all the very best for their future endeavours.</p>
                     </div>
                 </div>
                 <!-- Testimonial 2 -->
@@ -1277,7 +1277,7 @@
                             <div class="author">Anwar Sadique</div>
                             <div class="designation">Faculty Advisor</div>
                         </div>
-                        <p>SAE GECT Chapter provides you the perfect opportunity to  acquire the offers from SAEINDIA in raising <br>yourselves to the industrial standards. Being a part of it can enhance your overall skills and <br>prepare you in every manner.</p>
+                        <p>SAE GECT Chapter provides you the perfect opportunity to  acquire the offers from SAEINDIA in raising yourselves to the industrial standards. Being a part of it can enhance your overall skills and prepare you in every manner.</p>
                     </div>
                 </div>
                 <!-- Testimonial 3 -->
@@ -1288,7 +1288,7 @@
                             <div class="author">Francis Augustine Joseph</div>
                             <div class="designation">Honorable Customer</div>
                         </div>
-                        <p>SAE GECT is one among the most successful collegiate clubs in the state. Being an active member of such <br>a great club will unveil the treasure of opportunities to learn, groom, enjoy and equip<br> yourself for the future.</p>
+                        <p>SAE GECT is one among the most successful collegiate clubs in the state. Being an active member of such a great club will unveil the treasure of opportunities to learn, groom, enjoy and equip yourself for the future.</p>
                     </div>
                 </div>
             </div>
