--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="200" />
      
     <title>SAE | GEC Thrissur</title>
-    <link rel="icon" type="image/png" href="images/logos/sae.png"/>
+    <link rel="icon" type="image/png" href="images/logos/sae.png?"/>
     <!-- Bootstrap Core CSS -->
     <link href="asset/css/bootstrap.min.css" rel="stylesheet">
     
