--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600"
     />
     <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="Font-Awesome-4.7/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Bootstrap style -->
@@ -59,198 +59,8 @@
               <div class="tm-img-gallery-container">
                 <div class="tm-img-gallery gallery-one" id="gallery-div">
                   <!-- Gallery One pop up connected with JS code below -->
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-01-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-01.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-02-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-02.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-03-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-03.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-04-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-04.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-01-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-01.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-02-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-02.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-03-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-03.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-04-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-04.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-01-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-01.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-02-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-02.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-03-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-03.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-04-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-04.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-01-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-01.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-02-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-02.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-03-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-03.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
-                  <div class="grid-item">
-                    <figure class="img-hover-zoom">
-                      <img
-                        src="img/tm-img-04-tn.jpg"
-                        alt="Image"
-                        class="img-fluid tm-img"
-                      />
-                      <figcaption>
-                        <a href="img/tm-img-04.jpg">View more</a>
-                      </figcaption>
-                    </figure>
-                  </div>
+                  
+                  
                 </div>
               </div>
             </div>
