--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,14 +16,14 @@
     <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../achievements/css/bootstrap.min.css" />
     <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/hero-slider-style.css" />
+    <link rel="stylesheet" href="../achievements/css/hero-slider-style.css" />
     <!-- Hero slider style (https://codyhouse.co/gem/hero-slider/) -->
-    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link rel="stylesheet" href="../achievements/css/magnific-popup.css" />
     <!-- Magnific popup style (http://dimsemenov.com/plugins/magnific-popup/) -->
     <link rel="stylesheet" href="css/templatemo-style.css" />
-    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="../achievements/js/jquery-1.11.3.min.js"></script>
   </head>
 
   <body>
@@ -103,13 +103,13 @@
 
     <!-- load JS files -->
 
-    <script src="js/tether.min.js"></script>
+    <script src="../achievements/js/js/tether.min.js"></script>
     <!-- Tether (http://tether.io/)  -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../achievements/js/bootstrap.min.js"></script>
     <!-- Bootstrap js (v4-alpha.getbootstrap.com/) -->
-    <script src="js/hero-slider-main.js"></script>
+    <script src="../achievements/js/hero-slider-main.js"></script>
     <!-- Hero slider (https://codyhouse.co/gem/hero-slider/) -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="../achievements/js/jquery.magnific-popup.min.js"></script>
     <!-- Magnific popup (http://dimsemenov.com/plugins/magnific-popup/) -->
 
     <script>
